fixed spacing, added photos, almost done?

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ padding:0px;
 margin:0px}
 
 div{
-    border: 1px solid rgb(102, 144, 66);
+    /* border: 1px solid rgb(102, 144, 66); */
     /* margin:5px;  */
        
 }
@@ -12,33 +12,49 @@ div{
 }
 
 header{
+    width:100%;
+    position: fixed;
+    top: 0;
     display:flex;
-    border:3px solid green;
-    justify-content: flex-start;
+    /* border:3px solid green; */
+    justify-content:flex-start;
     background-color: white;
     color:#d7454f;
-
+    
 
 }
 
-.img:hover{
-}
 
-.interior {width:85%
-}
-
-.interior--img{width:40%;
-}
 
 nav{height:60px;
-    margin-left: 100px;
+    
     display: flex;
     flex-flow: column wrap;
     font-family: Constantia;
-    font-size: 20px;
+    font-size: 23px;
     text-align: center;
-    padding:2px;
+    margin-left:5%;
 
+}
+
+.space{height:60px}
+
+.container.description{
+    display:flex;
+}
+
+.description--img{
+    width:50%;
+}
+
+.description--text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width:50%;
+    color: #d7454f;
+    font-size:40px;
 }
 
 
@@ -46,30 +62,38 @@ h2{text-align: center;
     color: #d7454f;
 }
 
-
 .container{
     display:flex;
     justify-content: space-around;
 }
 
-.thumbnail{margin:5px;
+.thumbnail{margin:5px 6px;
+    width:25%
 }
 
+.thumbnail:hover{
+-moz-box-shadow: 0 0 10px #ccc;
+-webkit-box-shadow: 0 0 10px #ccc;
+box-shadow: 0px 0px 50px #d7454f;
+border-radius: 8px;
+}
 .thumbnail--img{
-    margin: 2px 10px;
-    width:150px;
+    
+    width:100%;
+    object-fit: contain;
     border:3px solid #d7454f;
     border-radius: 8px;
 }
 
 .thumbnail--text{font-family: Roboto, Arial, Helvetica, sans-serif;
-    margin:2px 10px;
-    width:154px;
+    
+    width:100%;
     text-align: center;
+    font-size: 23px;
 }
 
 
-.container--quote{
+.quote{
     margin: 50px 0px;
     display:flex;
     justify-content: space-around;
@@ -86,12 +110,13 @@ h2{text-align: center;
 
 
 .quote--text{
-    background-color: whitesmoke;
+    font-size: 23px;
+
 }
 
 .container--signup {
     
-    background-color: whitesmoke;
+    background-color: white;
     display: flex;
     /* height:100px; */
     align-items: stretch;
@@ -101,8 +126,9 @@ h2{text-align: center;
 }
 
 .signup--text{
-    background-color: whitesmoke;
+    background-color: white;
     flex:1;
+    font-size: 23px;
     align-items: center;
     text-align: center;
     padding:10px
@@ -110,7 +136,7 @@ h2{text-align: center;
 
 .signup--button{
     /* margin:0px 50px 0px 0px; */
-    background-color: whitesmoke;
+    background-color: white;
     flex:1.5;
     display: flex;
     justify-content: center;
@@ -118,8 +144,8 @@ h2{text-align: center;
 
 }
 
-button{background-color: whitesmoke;
-    font-size: 18px;
+button{background-color: white;
+    font-size: 23px;
     border-radius: 8px;
     border-color: #d7454f;
     color: #d7454f;
